--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+sync/
+token
+/Screenshot_20241013_104208.png
+/Screenshot_20241013_104219.png
+/screenshot_for_reference.png
+/screenshot_for_reference2.png
+/webrtc_event_logs/
