--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pycparser==2.22
 pygame==2.6.1
 pygame-ce==2.5.1
 pygameextra==2.0.0a82
+PyJWT==2.9.0
 pypdf2==3.0.1
 python-box==7.2.0
 python-dotenv==1.0.1
