--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,11 @@ on:
 
 jobs:
   pyinstaller-build:
-    runs-on: <windows-latest>
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ windows-latest ]
+#        , ubuntu-latest, macos-latest
     steps:
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
