--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 clr-loader==0.2.6
+colorama==0.4.6
 deprecation==2.1.0
 frozendict==2.4.5
 idna==3.10
