--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ env:
   APP_NAME: "Moss Desktop"
 
 jobs:
-  pyinstaller-build:
+  cef-build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -31,10 +31,11 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller --onefile run_gui.py --name="${{ env.APP_NAME }}"
+          pyinstaller --onefile run_gui.py --name="${{ env.APP_NAME }} CEF"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.APP_NAME }}
-          path: dist/*
+          path: |
+            dist/${{ env.APP_NAME }} CEF.exe
