clean up requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,11 @@
 CEF4pygame==0.0
 cefpython3==66.1
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-clr-loader==0.2.6
 colorama==0.4.6
-deprecation==2.1.0
-frozendict==2.4.5
-idna==3.10
-numpy==2.0.2
-packaging==24.1
-pdf2image==1.17.0
 pillow==10.4.0
-pycparser==2.22
-pygame==2.6.1
-pygame-ce==2.5.1
 pygameextra==2.0.0a82
 PyJWT==2.9.0
-pypdf2==3.0.1
+pyperclip==1.9.0
 python-box==7.2.0
-python-dotenv==1.0.1
-pythonnet==3.0.4
 requests==2.32.3
-typing-extensions==4.12.2
-urllib3==2.2.3
 websocket-client==1.8.0
+
