--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller --onefile run_gui.py --name="${{ env.APP_NAME }} CEF"
+          pyinstaller --onefile run_gui.spec --name="${{ env.APP_NAME }} CEF" --noconsole
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
