--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,8 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller --onefile run_gui.spec --name="${{ env.APP_NAME }} CEF" --noconsole
+          pyinstaller run_gui.spec
+          move dist/gui.exe dist/"${{ env.APP_NAME }} CEF.exe"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
