--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,13 +31,11 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller run_gui.spec
-          dir dist
-          move dist/gui.exe dist/"${{ env.APP_NAME }} CEF.exe"
+          pyinstaller --onefile run_gui.py --name="${{ env.APP_NAME }} CEF" --noconsole
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.APP_NAME }}
           path: |
-            dist/${{ env.APP_NAME }} CEF.exe
+            dist/*
