--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
           pip install pyinstaller
 
       - name: Build
-        uses Nuitka/Nuitka-Action@main
+        uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
           script-name: run_gui.py
