--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: '3.9'
           cache: 'pip'
-          cache-dependency-path: requirements-{{ runner.os }}.txt
+          cache-dependency-path: requirements-${{ runner.os }}.txt
 
       - name: Install dependencies
         run: |
