--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,8 +31,11 @@ jobs:
           script-name: run_gui.py
           standalone: true
           onefile: true
+          disable-console: true
           macos-create-app-bundle: true
-          include-data-dir: assets
+          deployment: ${{ github.ref == 'refs/heads/main' }}
+          include-data-dir: |
+            assets=assets
           include-data-files: |
             LICENSE
 
