--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,8 +28,6 @@ jobs:
         uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
-          include-module: |
-            pygameextra
           script-name: run_gui.py
           standalone: true
           onefile: true
@@ -49,3 +47,4 @@ jobs:
             build/run_gui.exe
             build/run_gui.bin
             build/run_gui.app
+            build/run_gui.tar.gz
