--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,8 @@ jobs:
         with:
           nuitka-version: main
           script-name: run_gui.py
+          include-package: |
+            pygameextra
           standalone: true
           onefile: true
           disable-console: ${{ github.ref == 'refs/heads/main' }}
@@ -39,21 +41,6 @@ jobs:
           include-data-files: |
             LICENSE=LICENSE
 
-#      - name: Zip dist
-#        run: |
-#          python -c "import zipfile,shutil; shutil.make_archive('dist-signed', 'zip', 'build/main.dist')"
-#
-#      - name: Zip onefile
-#        run: |
-#          python -c "import zipfile,shutil; shutil.make_archive('onefile-unsigned', 'zip', 'zipped')"
-
-      - name: Print contents
-        run: |
-          ls -l build
-          ls -l build/run_gui.dist
-          ls -l build/run_gui.dist/run_gui.app
-        shell: bash
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -62,4 +49,3 @@ jobs:
             build/run_gui.exe
             build/run_gui.bin
             build/run_gui.app
-            build/run_gui.tar.gz
