--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,10 +40,10 @@ jobs:
           macos-create-app-bundle: true
           deployment: ${{ github.ref == 'refs/heads/main' }}
           report: compilation-report.xml
-          windows-icon-from-ico: assets/moss.ico
-          macos-app-icon: assets/moss.png
+          windows-icon-from-ico: assets/icons/moss.ico
+          macos-app-icon: assets/icons/moss.png
           macos-app-name: ${{ env.APP_NAME }}
-          linux-icon: assets/moss.png
+          linux-icon: assets/icons/moss.png
           include-data-dir: |
             assets=assets
           include-data-files: |
