add screenshots folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -159,13 +159,8 @@ cython_debug/
 sync/
 token
 config.json
-/Screenshot_20241013_104208.png
-/Screenshot_20241013_104219.png
-/screenshot_for_reference.png
-/screenshot_for_reference2.png
+screenshots/
 /webrtc_event_logs/
-/screenshot_for_reference4.png
-/screenshot_for_reference3.png
 /api_ref/
 /blob_storage/
 /sync_exports/
