--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-${{ runner.os }}.txt
 
+      - name: Switch from pygame-ce to pygame
+        run: |
+          pip uninstall pygame_ce
+          pip install pygame
+
       - name: Build
         uses: Nuitka/Nuitka-Action@main
         with:
