try to build for pygame==2.5.1

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Switch from pygame-ce to pygame
         run: |
           pip uninstall --yes pygame_ce
-          pip install pygame
+          pip install pygame==2.5.1
 
       - name: Build
         uses: Nuitka/Nuitka-Action@main
