--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,8 @@ jobs:
     strategy:
       matrix:
 #        os: [ windows-latest, ubuntu-latest, macos-latest ]
-        os: [ ubuntu-latest, macos-latest ]
+#        os: [ ubuntu-latest, macos-latest ]
+        os: [ windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
