--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,7 @@ on:
       - action-testing
     paths:
       - '**/*.py'
+      - '.github/workflows/build.yaml'
 
 env:
   APP_NAME: "Moss Desktop"
@@ -15,7 +16,7 @@ jobs:
     strategy:
       matrix:
 #        os: [ windows-latest, ubuntu-latest, macos-latest ]
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ windows-latest, ubuntu-latest ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
