--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
       matrix:
 #        os: [ windows-latest, ubuntu-latest, macos-latest ]
 #        os: [ ubuntu-latest, macos-latest ]
-        os: [ windows-latest]
+        os: [ macos-latest-large ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
