Switch to nuitka factory

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
           pip install -r requirements-${{ runner.os }}.txt
 
       - name: Build
-        uses: Nuitka/Nuitka-Action@main
+        uses: Nuitka/Nuitka-Action@factory
         with:
           nuitka-version: ${{ matrix.os == 'macos-latest' && 'factory' || 'main' }}
           script-name: moss.py
