--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,11 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-${{ runner.os }}.txt
 
+      - name: Get Python site-packages path
+        id: get-site-packages-path
+        run: |
+          echo "SITE_PACKAGES_PATH=$(python -c 'import site; print(site.getsitepackages()[0])')" >> $GITHUB_ENV
+
       - name: Build
         uses: Nuitka/Nuitka-Action@main
         with:
@@ -53,6 +58,8 @@ jobs:
             assets=assets
           include-data-files: |
             LICENSE=LICENSE
+            ${{ env.SITE_PACKAGES_PATH }}/pygame/libpng16-16.dll=libpng16-16.dll
+
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
