--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,11 +35,6 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-${{ runner.os }}.txt
 
-      - name: Get Python site-packages path
-        id: get-site-packages-path
-        run: |
-          echo "SITE_PACKAGES_PATH=$(python -c 'import site; print(site.getsitepackages()[0])')" >> $GITHUB_ENV
-
       - name: Build
         uses: Nuitka/Nuitka-Action@main
         with:
@@ -58,7 +53,7 @@ jobs:
             assets=assets
           include-data-files: |
             LICENSE=LICENSE
-            ${{ env.SITE_PACKAGES_PATH }}/pygame/libpng16-16.dll=libpng16-16.dll
+            ${{ env.Python_ROOT_DIR }}/site-packages/pygame/libpng16-16.dll=libpng16-16.dll
           nofollow-import-to: |
             pymupdf.mupdf
 
