use pygameextra to avoid welcome message

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Get pygame directory
         shell: bash
         run: |
-          PYGAME_DIR=$(python -c 'import os, pygame; print(os.path.dirname(pygame.__file__))')
+          PYGAME_DIR=$(python -c 'import os, pygameextra; print(os.path.dirname(pygameextra.pygame.__file__))')
           echo "PYGAME_DIR=${PYGAME_DIR}" >> $GITHUB_ENV
           echo "DEBUG: ${PYGAME_DIR}"
           
