Revert "temporary change to test pymupdf"
This reverts commit d659c3dd344a46f8672a35ab6d02a8e6589ddf08.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,8 +45,7 @@ jobs:
         uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: ${{ matrix.os == 'macos-latest' && 'factory' || 'main' }}
-          # script-name: moss.py
-          script-name: test_pymupdf.py
+          script-name: moss.py
           mode: app
           disable-console: ${{ github.ref == 'refs/heads/main' }}
           macos-create-app-bundle: true
@@ -72,5 +71,4 @@ jobs:
             build/moss.exe
             build/moss.bin
             build/moss.app
-            build/test_pymupdf.exe
             compilation-report.xml
