--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ screenshots/
 /blob_storage/
 /sync_exports/
 /assets/icons/moss.pdn
+screenshot.png
 token-2
 thumbnails/
 /melora/melora-extensions/configs/
